# happly

./: .gitignore  .travis.yml  README.md  happly.h
.clusterfuzzlite/: Dockerfile  build.sh  ply_fuzzer.cpp
.github/workflows/: linux.yml  macOS.yml  windows.yml
test/: CMakeLists.txt  CMakeLists.txt.in  main_test.cpp  other.cpp  reader.cpp
test/sampledata/: platonic_shelf.ply  platonic_shelf_ascii.ply  platonic_shelf_big_endian.ply  spot_quad.ply  spot_quad_nopoly.ply
